--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,6 +6,7 @@
 }
 
 section#main_page {
+  overflow: hidden;
   padding: 3px;
   display: flex;
   flex-direction: column;
@@ -100,12 +101,13 @@ section#main_page section aside {
   padding-top: 1rem;
 }
 section#main_page section aside .title {
+  background-color: black;
   margin-bottom: 1rem;
   padding: 5px 10px;
-  background-color: black;
+  min-width: max-content;
 }
 section#main_page section aside .title h1 {
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-align: center;
   color: white;
 }
@@ -123,44 +125,92 @@ section#main_page section aside ul li:nth-child(1) {
   font-weight: bold;
 }
 section#main_page section aside ul li a {
+  font-size: 1.1rem;
   width: 100%;
   color: black;
   text-decoration: none;
   text-align: center;
 }
 section#main_page section main {
-  padding: 5px;
+  overflow-y: auto;
   flex-grow: 1;
   border: 1px solid black;
   height: 100%;
 }
-section#main_page section main .title {
-  display: flex;
-  justify-content: center;
-  padding: 0.5rem 3rem;
+section#main_page section main::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+section#main_page section main::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: #dfe9eb;
+}
+section#main_page section main::-webkit-scrollbar-track:hover {
+  background-color: #b8c0c2;
+}
+section#main_page section main::-webkit-scrollbar-track:active {
+  background-color: #b8c0c2;
+}
+section#main_page section main::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.724);
+}
+section#main_page section main::-webkit-scrollbar-thumb:hover {
   background-color: black;
 }
+section#main_page section main::-webkit-scrollbar-thumb:active {
+  background-color: black;
+}
+section#main_page section main .title {
+  position: sticky;
+  top: 0;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+}
 section#main_page section main .title h1 {
+  background-color: black;
+  width: 100%;
+  text-align: center;
+  padding: 0.3rem;
   color: white;
   font-size: 2rem;
 }
 section#main_page section main .content {
+  z-index: -1;
   display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 1rem 2rem;
   justify-content: center;
   align-items: center;
 }
-section#main_page section main .content img {
-  width: 45%;
-  padding-top: 1rem;
+section#main_page section main .content p {
+  text-align: justify;
+  font-size: 1.1rem;
+}
+section#main_page section main .content p::first-letter {
+  font-weight: bold;
+  font-size: 2rem;
 }
 section#main_page footer {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  width: 100%;
   align-items: center;
   border: 1px solid black;
+  padding: 0.5rem 2rem;
 }
-section#main_page footer h1 {
-  font-size: 3rem;
+section#main_page footer div:nth-child(1) {
+  min-width: max-content;
+}
+section#main_page footer div:nth-child(2) {
+  display: flex;
+  gap: 2rem;
+}
+section#main_page footer div:nth-child(2) ul {
+  list-style: square;
 }
 
 /*# sourceMappingURL=main.css.map */
