--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@ $poppins: "Poppins", sans-serif;
     box-sizing: border-box;
 }
 section#main_page {
+    overflow: hidden;
     padding: 3px;
     display: flex;
     flex-direction: column;
@@ -107,11 +108,12 @@ section#main_page {
             border: 1px solid black;
             padding-top: 1rem;
             .title {
+                background-color: black;
                 margin-bottom: 1rem;
                 padding: 5px 10px;
-                background-color: black;
+                min-width: max-content;
                 h1 {
-                    font-size: 1.2rem;
+                    font-size: 1rem;
                     text-align: center;
                     color: white;
                 }
@@ -128,6 +130,7 @@ section#main_page {
                     display: flex;
                     justify-content: center;
                     a {
+                        font-size: 1.1rem;
                         width: 100%;
                         color: black;
                         text-decoration: none;
@@ -137,38 +140,97 @@ section#main_page {
             }
         }
         main {
-            padding: 5px;
+            overflow-y: auto;
             flex-grow: 1;
             border: 1px solid black;
             height: 100%;
+            // todo - scrollbar
+            &::-webkit-scrollbar {
+                height: 5px;
+                width: 5px;
+            }
+            &::-webkit-scrollbar-track {
+                border-radius: 0;
+                background-color: #dfe9eb;
+            }
+
+            &::-webkit-scrollbar-track:hover {
+                background-color: #b8c0c2;
+            }
+
+            &::-webkit-scrollbar-track:active {
+                background-color: #b8c0c2;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                border-radius: 5px;
+                background-color: rgba(0, 0, 0, 0.724);
+            }
+
+            &::-webkit-scrollbar-thumb:hover {
+                background-color: black;
+            }
+
+            &::-webkit-scrollbar-thumb:active {
+                background-color: black;
+            }
+
+            // todo - end scrollbar
             .title {
+                position: sticky;
+                top: 0;
+                background-color: white;
                 display: flex;
                 justify-content: center;
-                padding: 0.5rem 3rem;
-                background-color: black;
+                padding: 5px;
                 h1 {
+                    background-color: black;
+                    width: 100%;
+                    text-align: center;
+                    padding: 0.3rem;
                     color: white;
                     font-size: 2rem;
                 }
             }
             .content {
+                z-index: -1;
                 display: flex;
+                flex-direction: column;
+                gap: 10px;
+                padding: 1rem 2rem;
                 justify-content: center;
                 align-items: center;
-                img {
-                    width: 45%;
-                    padding-top: 1rem;
+                p {
+                    text-align: justify;
+                    font-size: 1.1rem;
+                    &::first-letter {
+                        font-weight: bold;
+                        font-size: 2rem;
+                    }
                 }
             }
         }
     }
     footer {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
+        width: 100%;
         align-items: center;
         border: 1px solid black;
-        h1 {
-            font-size: 3rem;
+        padding: 0.5rem 2rem;
+        div {
+            &:nth-child(1) {
+                min-width: max-content;
+            }
+            &:nth-child(2) {
+                display: flex;
+                gap: 2rem;
+                // width: 100%;
+                ul {
+                    list-style: square;
+                }
+                // justify-content: space-around;
+            }
         }
     }
 }
