--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,7 @@ $poppins: "Poppins", sans-serif;
     padding: 0;
     box-sizing: border-box;
 }
-section#main_page {
+section#blpt_page {
     overflow: hidden;
     padding: 3px;
     display: flex;
@@ -23,12 +23,19 @@ section#main_page {
         justify-content: flex-start;
         align-items: center;
         border-bottom: 3px solid black;
-        h1 {
-            &::first-letter {
-                font-size: 3rem;
-                font-style: italic;
+        .logo {
+            img {
+                width: 60px;
             }
-            font-size: 2rem;
+        }
+        .title {
+            h1 {
+                &::first-letter {
+                    font-size: 4rem;
+                    font-style: italic;
+                }
+                font-size: 3rem;
+            }
         }
     }
     nav {
@@ -38,12 +45,12 @@ section#main_page {
             background-color: white;
             display: flex;
             margin-top: -15px;
-            margin-left: 30px;
+            margin-left: 75px;
             gap: 5px;
             list-style: none;
             li {
                 &:nth-child(1) {
-                    .Btn {
+                    .nav-link {
                         border: 1px solid black;
                         &::before {
                             transition-duration: 0.3s;
@@ -52,7 +59,7 @@ section#main_page {
                         }
                     }
                 }
-                .Btn {
+                .nav-link {
                     min-width: 120px;
                     padding: 0 10px;
                     text-decoration: none;
@@ -109,7 +116,7 @@ section#main_page {
             padding-top: 1rem;
             .title {
                 background-color: black;
-                margin-bottom: 1rem;
+                margin-bottom: 2rem;
                 padding: 5px 10px;
                 min-width: max-content;
                 h1 {
@@ -121,7 +128,7 @@ section#main_page {
             ul {
                 display: flex;
                 flex-direction: column;
-                gap: 10px;
+                gap: 5px;
                 list-style: none;
                 li {
                     &:nth-child(1) {
@@ -130,7 +137,7 @@ section#main_page {
                     display: flex;
                     justify-content: center;
                     a {
-                        font-size: 1.1rem;
+                        font-size: 1rem;
                         width: 100%;
                         color: black;
                         text-decoration: none;
@@ -202,10 +209,10 @@ section#main_page {
                 align-items: center;
                 p {
                     text-align: justify;
-                    font-size: 1.1rem;
+                    font-size: 0.9rem;
                     &::first-letter {
                         font-weight: bold;
-                        font-size: 2rem;
+                        font-size: 1.5rem;
                     }
                 }
             }
@@ -233,4 +240,510 @@ section#main_page {
             }
         }
     }
+}
+section#amikom_page {
+    overflow: hidden;
+    padding: 3px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    // background-color: gray;
+    min-height: 100vh;
+    max-height: 100vh;
+    height: 100vh;
+    font-family: $poppins;
+    header {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        border-bottom: 3px solid black;
+        .logo {
+            img {
+                width: 60px;
+            }
+        }
+        .title {
+            h1 {
+                &::first-letter {
+                    font-size: 4rem;
+                    font-style: italic;
+                }
+                font-size: 3rem;
+            }
+        }
+    }
+    nav {
+        display: flex;
+        // justify-content: flex-end;
+        ul {
+            background-color: white;
+            display: flex;
+            margin-top: -15px;
+            margin-left: 75px;
+            gap: 5px;
+            list-style: none;
+            li {
+                &:nth-child(2) {
+                    .nav-link {
+                        border: 1px solid black;
+                        &::before {
+                            transition-duration: 0.3s;
+                            transform: translate(100%, -50%);
+                            border-radius: 0;
+                        }
+                    }
+                }
+                .nav-link {
+                    min-width: 120px;
+                    padding: 0 10px;
+                    text-decoration: none;
+                    height: 35px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: rgb(15, 15, 15);
+                    border: none;
+                    color: white;
+                    font-weight: 600;
+                    gap: 8px;
+                    cursor: pointer;
+                    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
+                    position: relative;
+                    overflow: hidden;
+                    transition-duration: 0.3s;
+                    &::before {
+                        width: 130px;
+                        height: 130px;
+                        position: absolute;
+                        content: "";
+                        background-color: white;
+                        border-radius: 50%;
+                        left: -100%;
+                        top: 0;
+                        transition-duration: 0.3s;
+                        mix-blend-mode: difference;
+                    }
+
+                    &:hover::before {
+                        transition-duration: 0.3s;
+                        transform: translate(100%, -50%);
+                        border-radius: 0;
+                    }
+
+                    &:active {
+                        transform: translate(5px, 5px);
+                        transition-duration: 0.3s;
+                    }
+                }
+            }
+        }
+    }
+    section {
+        height: 100%;
+        margin-top: 0.5rem;
+        display: flex;
+        gap: 5px;
+        min-height: 30vh;
+        aside {
+            padding: 5px 20px;
+            border: 1px solid black;
+            padding-top: 1rem;
+            .title {
+                background-color: black;
+                margin-bottom: 2rem;
+                padding: 5px 10px;
+                min-width: max-content;
+                h1 {
+                    font-size: 1rem;
+                    text-align: center;
+                    color: white;
+                }
+            }
+            ul {
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+                list-style: none;
+                li {
+                    &:nth-child(1) {
+                        font-weight: bold;
+                    }
+                    display: flex;
+                    justify-content: center;
+                    a {
+                        font-size: 1rem;
+                        width: 100%;
+                        color: black;
+                        text-decoration: none;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+        main {
+            overflow-y: auto;
+            flex-grow: 1;
+            border: 1px solid black;
+            height: 100%;
+            // todo - scrollbar
+            &::-webkit-scrollbar {
+                height: 5px;
+                width: 5px;
+            }
+            &::-webkit-scrollbar-track {
+                border-radius: 0;
+                background-color: #dfe9eb;
+            }
+
+            &::-webkit-scrollbar-track:hover {
+                background-color: #b8c0c2;
+            }
+
+            &::-webkit-scrollbar-track:active {
+                background-color: #b8c0c2;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                border-radius: 5px;
+                background-color: rgba(0, 0, 0, 0.724);
+            }
+
+            &::-webkit-scrollbar-thumb:hover {
+                background-color: black;
+            }
+
+            &::-webkit-scrollbar-thumb:active {
+                background-color: black;
+            }
+
+            // todo - end scrollbar
+            .title {
+                position: sticky;
+                top: 0;
+                background-color: white;
+                display: flex;
+                justify-content: center;
+                padding: 5px;
+                h1 {
+                    background-color: black;
+                    width: 100%;
+                    text-align: center;
+                    padding: 0.3rem;
+                    color: white;
+                    font-size: 2rem;
+                }
+            }
+            .content {
+                z-index: -1;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                padding: 1rem 2rem;
+                justify-content: center;
+                align-items: center;
+                p {
+                    text-align: justify;
+                    font-size: 0.9rem;
+                    &::first-letter {
+                        font-weight: bold;
+                        font-size: 1.5rem;
+                    }
+                }
+            }
+        }
+    }
+    footer {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        align-items: center;
+        border: 1px solid black;
+        padding: 0.5rem 2rem;
+        div {
+            &:nth-child(1) {
+                min-width: max-content;
+            }
+            &:nth-child(2) {
+                display: flex;
+                gap: 2rem;
+                // width: 100%;
+                ul {
+                    list-style: square;
+                }
+                // justify-content: space-around;
+            }
+        }
+    }
+}
+section#wisata_page {
+    overflow: hidden;
+    padding: 3px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    // background-color: gray;
+    min-height: 100vh;
+    max-height: 100vh;
+    height: 100vh;
+    font-family: $poppins;
+    header {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        border-bottom: 3px solid black;
+        &:hover {
+            .logo {
+                animation: none;
+                transform: scale(8) translateX(100%) translateY(50%);
+            }
+        }
+        .logo {
+            z-index: 999;
+            animation: spin 1s linear infinite;
+            img {
+                width: 85px;
+            }
+        }
+        .title {
+            h1 {
+                &::first-letter {
+                    font-size: 4rem;
+                    font-style: italic;
+                }
+                font-size: 3rem;
+            }
+        }
+    }
+    nav {
+        display: flex;
+        // justify-content: flex-end;
+        ul {
+            background-color: white;
+            display: flex;
+            margin-top: -15px;
+            margin-left: 75px;
+            gap: 5px;
+            list-style: none;
+            li {
+                &:nth-child(3) {
+                    .nav-link {
+                        border: 1px solid black;
+                        &::before {
+                            transition-duration: 0.3s;
+                            transform: translate(100%, -50%);
+                            border-radius: 0;
+                        }
+                    }
+                }
+                .nav-link {
+                    min-width: 120px;
+                    padding: 0 10px;
+                    text-decoration: none;
+                    height: 35px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: rgb(15, 15, 15);
+                    border: none;
+                    color: white;
+                    font-weight: 600;
+                    gap: 8px;
+                    cursor: pointer;
+                    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
+                    position: relative;
+                    overflow: hidden;
+                    transition-duration: 0.3s;
+                    &::before {
+                        width: 130px;
+                        height: 130px;
+                        position: absolute;
+                        content: "";
+                        background-color: white;
+                        border-radius: 50%;
+                        left: -100%;
+                        top: 0;
+                        transition-duration: 0.3s;
+                        mix-blend-mode: difference;
+                    }
+
+                    &:hover::before {
+                        transition-duration: 0.3s;
+                        transform: translate(100%, -50%);
+                        border-radius: 0;
+                    }
+
+                    &:active {
+                        transform: translate(5px, 5px);
+                        transition-duration: 0.3s;
+                    }
+                }
+            }
+        }
+    }
+    section {
+        height: 100%;
+        margin-top: 0.5rem;
+        display: flex;
+        gap: 5px;
+        min-height: 30vh;
+        aside {
+            padding: 5px 20px;
+            border: 1px solid black;
+            padding-top: 1rem;
+            .title {
+                background-color: black;
+                margin-bottom: 2rem;
+                padding: 5px 10px;
+                min-width: max-content;
+                h1 {
+                    font-size: 1rem;
+                    text-align: center;
+                    color: white;
+                }
+            }
+            ul {
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+                list-style: none;
+                li {
+                    &:nth-child(1) {
+                        font-weight: bold;
+                    }
+                    display: flex;
+                    justify-content: center;
+                    a {
+                        font-size: 1rem;
+                        width: 100%;
+                        color: black;
+                        text-decoration: none;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+        main {
+            overflow-y: auto;
+            flex-grow: 1;
+            border: 1px solid black;
+            height: 100%;
+            // todo - scrollbar
+            &::-webkit-scrollbar {
+                height: 5px;
+                width: 5px;
+            }
+            &::-webkit-scrollbar-track {
+                border-radius: 0;
+                background-color: #dfe9eb;
+            }
+
+            &::-webkit-scrollbar-track:hover {
+                background-color: #b8c0c2;
+            }
+
+            &::-webkit-scrollbar-track:active {
+                background-color: #b8c0c2;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                border-radius: 5px;
+                background-color: rgba(0, 0, 0, 0.724);
+            }
+
+            &::-webkit-scrollbar-thumb:hover {
+                background-color: black;
+            }
+
+            &::-webkit-scrollbar-thumb:active {
+                background-color: black;
+            }
+
+            // todo - end scrollbar
+            .title {
+                position: sticky;
+                top: 0;
+                background-color: white;
+                display: flex;
+                justify-content: center;
+                padding: 5px;
+                h1 {
+                    background-color: black;
+                    width: 100%;
+                    text-align: center;
+                    padding: 0.3rem;
+                    color: white;
+                    font-size: 2rem;
+                }
+            }
+            .content {
+                z-index: -1;
+                display: flex;
+                flex-direction: column;
+                // gap: 5px;
+                padding: 1rem 2rem;
+                justify-content: center;
+                align-items: center;
+                &_title {
+                    width: 100%;
+                    h1 {
+                        text-decoration: underline;
+                        text-align: left;
+                        width: 100%;
+                        &::first-letter {
+                            font-size: 3rem;
+                        }
+                    }
+                }
+                &_image {
+                    display: flex;
+                    gap: 50px;
+                    margin-bottom: 10px;
+                    img {
+                        width: 550px;
+                    }
+                    &_description {
+                        p {}
+                    }
+                }
+                p {
+                    text-align: justify;
+                    font-size: 0.9rem;
+                    &::first-letter {
+                        font-weight: bold;
+                        font-size: 1.5rem;
+                    }
+                }
+            }
+        }
+    }
+    footer {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        align-items: center;
+        border: 1px solid black;
+        padding: 0.5rem 2rem;
+        div {
+            &:nth-child(1) {
+                min-width: max-content;
+            }
+            &:nth-child(2) {
+                display: flex;
+                gap: 2rem;
+                // width: 100%;
+                ul {
+                    list-style: square;
+                }
+                // justify-content: space-around;
+            }
+        }
+    }
+    @keyframes spin {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
 }
