message: marekne layout kabeh halaman

--- a/views/wisata/detail/malioboro/index.html
+++ b/views/wisata/detail/malioboro/index.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KEL4 - Wisata HEHA SKY VIEW</title>
-    <link rel="stylesheet" href="./src/css/main.css" />
-    <script src="./src/js/app.js" defer></script>
+    <title>KEL4 - Wisata MALIOBORO</title>
+    <!-- Font Awesome Cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="../../../../src/css/main.css" />
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="../../../../src/js/app.js" defer></script>
 </head>
 
 <body>
@@ -16,10 +23,10 @@
         <h1>-Layar Besar-</h1>
         <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )</h1>
     </div>
-    <section id="wisata_page">
+    <section id="wisata_detail_malioboro">
         <header>
             <div class="logo">
-                <img src="./public/image/logo/logo-wisata.png" alt="">
+                <img src="../../../../public/image/logo/logo-wisata.png" alt="">
             </div>
             <div class="title">
                 <h1>WISATA</h1>
@@ -27,9 +34,9 @@
         </header>
         <nav>
             <ul>
-                <li><a href="./index.html" class="nav-link">BLPT</a></li>
-                <li><a href="./amikom.html" class="nav-link">AMIKOM</a></li>
-                <li><a href="./wisata.html" class="nav-link">WISATA</a></li>
+                <li><a href="../../../../index.html" class="nav-link">BLPT</a></li>
+                <li><a href="../../../../amikom.html" class="nav-link">AMIKOM</a></li>
+                <li><a href="../../../../wisata.html" class="nav-link">WISATA</a></li>
             </ul>
         </nav>
         <section>
@@ -38,10 +45,10 @@
                     <h1>TABEL KONTEN</h1>
                 </div>
                 <ul>
-                    <li><a href="./index.html">HEHA SKY VIEW</a></li>
-                    <li><a href="./views/wisata/detail/pinus-pengger/index.html">PINUS PENGGER</a></li>
-                    <li><a href="./views/wisata/detail/malioboro/index.html">MALIOBORO</a></li>
-                    <li><a href="./views/wisata/detail/prambanan/index.html">PRAMBANAN</a></li>
+                    <li><a href="../../../../wisata.html">HEHA SKY VIEW</a></li>
+                    <li><a href="../pinus-pengger/index.html">PINUS PENGGER</a></li>
+                    <li><a href="../malioboro/index.html">MALIOBORO</a></li>
+                    <li><a href="../prambanan/index.html">PRAMBANAN</a></li>
                 </ul>
             </aside>
             <main>
@@ -50,7 +57,7 @@
                 </div>
                 <div class="content">
                     <div class="content_title">
-                        <h1>HEHA SKY VIEW</h1>
+                        <h1>MALIOBORO</h1>
                     </div>
                     <div class="content_image">
                         <img src="./public/image/wisata/main-image.jpg" alt="heha">
