--- a/views/amikom/detail/struktur/index.html
+++ b/views/amikom/detail/struktur/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KEL4 - Struktur BLPT</title>
+    <title>KEL4 - Struktur AMIKOM</title>
     <!-- Font Awesome Cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -25,13 +25,13 @@
                 class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )
         </h1>
     </div>
-    <section id="blpt_detail_structure">
+    <section id="amikom_detail_structure">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-blpt.png" alt="">
+                <img src="../../../../public/image/logo/logo-amikom.jpg" alt="">
             </div>
             <div class="title">
-                <h1>BLPT</h1>
+                <h1>AMIKOM</h1>
             </div>
         </header>
         <nav>
@@ -47,10 +47,9 @@
                     <h1>TABEL KONTEN</h1>
                 </div>
                 <ul>
-                    <li><a href="../../../../index.html">PENJELASAN</a></li>
+                    <li><a href="../../../../amikom.html">PENJELASAN</a></li>
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
-                    <li><a href="../projek/index.html">PROJEK</a></li>
                     <li><a href="../dokumentasi/">DOKUMENTASI</a></li>
                 </ul>
             </aside>
@@ -59,7 +58,7 @@
                     <h1>PENJELASAN</h1>
                 </div>
                 <div class="content">
-                    <img src="../../../../public/image/struktur/struktur-blpt.png" alt="">
+                    <h1>Konten Struktur Amikom</h1>
                 </div>
             </main>
         </section>
