--- a/views/bltp/detail/dokumentasi/index.html
+++ b/views/bltp/detail/dokumentasi/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KEL4 - Struktur BLPT</title>
+    <title>KEL4 - Dokumentasi BLPT</title>
     <!-- Font Awesome Cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -25,7 +25,7 @@
                 class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )
         </h1>
     </div>
-    <section id="blpt_detail_structure">
+    <section id="blpt_detail_documentation">
         <header>
             <div class="logo">
                 <img src="../../../../public/image/logo/logo-blpt.png" alt="">
@@ -59,7 +59,7 @@
                     <h1>PENJELASAN</h1>
                 </div>
                 <div class="content">
-                    <img src="../../../../public/image/struktur/struktur-blpt.png" alt="">
+                    <h1>Konten Dokumentasi BLPT</h1>
                 </div>
             </main>
         </section>
